--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "install": "^0.13.0",
     "next": "13.3.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
