--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "sass": "^1.62.1"
