--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "bootstrap": "^5.2.3",
+    "graphql": "^16.6.0",
     "install": "^0.13.0",
     "next": "13.3.4",
     "react": "18.2.0",
